[gd_scene load_steps=15 format=2]

[ext_resource path="res://scenes/variations/0/Var0_0.gd" type="Script" id=1]
[ext_resource path="res://assets/theme/pensatta-theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/img/TitleRect.png" type="Texture" id=3]
[ext_resource path="res://assets/font/Montserrat-Bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://scenes/DropZone.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/img/parts/Rectangle 1 (9).png" type="Texture" id=6]
[ext_resource path="res://scenes/CPU.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/GPU.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/Board.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/DiskHard.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/RAM.tscn" type="PackedScene" id=11]
[ext_resource path="res://scenes/ReadingUnit.tscn" type="PackedScene" id=12]
[ext_resource path="res://assets/img/parts/Lupa 1.png" type="Texture" id=13]

[sub_resource type="DynamicFont" id=1]
size = 41
font_data = ExtResource( 4 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="RectTitleSprite" type="Sprite" parent="."]
position = Vector2( 0, 40 )
texture = ExtResource( 3 )
centered = false

[node name="TitleLabel" type="Label" parent="RectTitleSprite"]
margin_left = 88.2626
margin_top = 7.93414
margin_right = 507.263
margin_bottom = 58.9341
custom_fonts/font = SubResource( 1 )
text = "TÃ­tulo del problema"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextButton" type="Button" parent="."]
margin_left = 1014.0
margin_top = 794.0
margin_right = 1388.0
margin_bottom = 841.0
theme = ExtResource( 2 )
text = "SIGUIENTE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 220.649, 460.347 )
scale = Vector2( 1.14234, 1 )
texture = ExtResource( 6 )

[node name="DropZone" parent="." instance=ExtResource( 5 )]
position = Vector2( 1063.56, 453.997 )

[node name="CPU" parent="." instance=ExtResource( 7 )]
position = Vector2( 126.992, 457.172 )

[node name="GPU" parent="." instance=ExtResource( 8 )]
position = Vector2( 346.054, 282.558 )

[node name="Board" parent="." instance=ExtResource( 9 )]
position = Vector2( 120.643, 276.208 )

[node name="DiskHard" parent="." instance=ExtResource( 10 )]
position = Vector2( 346.054, 460.347 )

[node name="RAM" parent="." instance=ExtResource( 11 )]
position = Vector2( 117.468, 647.66 )

[node name="ReadingUnit" parent="." instance=ExtResource( 12 )]
position = Vector2( 339.704, 647.66 )

[node name="Sprite2" type="Sprite" parent="."]
visible = false
position = Vector2( 964.226, 581.429 )
scale = Vector2( 0.464969, 0.398228 )
texture = ExtResource( 13 )
[connection signal="pressed" from="NextButton" to="." method="_on_NextButton_pressed"]
[connection signal="mouse_entered" from="DropZone" to="." method="_on_DropZone_mouse_entered"]
[connection signal="mouse_exited" from="DropZone" to="." method="_on_DropZone_mouse_exited"]
